quick fix to table visual

--- a/ModuloAdministrador/views/menu_consultas.html
+++ b/ModuloAdministrador/views/menu_consultas.html
@@ -54,34 +54,41 @@
       </div>
     </div>
 
-        <div class="row justify-content-center">
-            <div style="overflow-y:scroll; height:350px;">
-                <table class="table table-bordere" id="Alumnos" >
-                  <thead id="header-table"  style=" ">
-                      <tr>
-                          <th>#</th>
-                          <th style="cursor: pointer;">CARRERA</th>
-                          <th style="cursor: pointer;">MATRICULA</th>
-                          <th style="cursor: pointer;">ACTIVIDADES</th>
-                          <th style="cursor: pointer;">VINCULACION</th>
-                          <th style="cursor: pointer;">CIENTIFICA</th>
-                          <th style="cursor: pointer;">DEPORTIVA</th>
-                          <th style="cursor: pointer;">SOCIAL</th>
-                          <th style="cursor: pointer;">CULTURAL</th>
-                      </tr>
-                  </thead>
-                  <tbody style=" ">
-                    <!-- Cargar Folios - AJAX -->
 
-                    <!-- Cargar Folios - AJAX -->
-                  </tbody>
-              </table>
-            </div>
+
+    </div>
+        <br>
+        <div class="row justify-content-center">
+            <div id="entirePage" style="padding:1rem;">
+              <div style="overflow-y:scroll; height:350px; padding: 1rem;">
+                  <table class="table table-bordere" id="Alumnos" >
+                    <thead id="header-table"  style=" ">
+                        <tr>
+                            <th>#</th>
+                            <th style="cursor: pointer;">CARRERA</th>
+                            <th style="cursor: pointer;">MATRICULA</th>
+                            <th style="cursor: pointer;">ACTIVIDADES</th>
+                            <th style="cursor: pointer;">VINCULACION</th>
+                            <th style="cursor: pointer;">CIENTIFICA</th>
+                            <th style="cursor: pointer;">DEPORTIVA</th>
+                            <th style="cursor: pointer;">SOCIAL</th>
+                            <th style="cursor: pointer;">CULTURAL</th>
+                        </tr>
+                    </thead>
+                    <tbody style=" ">
+                      <!-- Cargar Folios - AJAX -->
+
+                      <!-- Cargar Folios - AJAX -->
+                    </tbody>
+                </table>
+              </div>
+            </div> <!-- entire page id -->
         </div>
+        <br>
     </div>
     <div class="container">
     <div class="row justify-content-center align-items-center">
-    <div class="col-md-1 col-sm-1">
+    <div class="col-md-2 col-sm-2">
       <input type="button" name="" class="boton" value="Generar reporte" onclick="generarReporte()" id="reporte">
     </div>
   </div>
