Mejoras esteticas a admin

--- a/ModuloAdministrador/views/menu_alumnos.html
+++ b/ModuloAdministrador/views/menu_alumnos.html
@@ -23,10 +23,10 @@
 
     <div class="row justify-content-center">
       <div class="col-md-1 col-sm-1">
-        <input type="button" name="" class="boton-regresar" value="regresar" id="regresar">
+        <input type="button" name="" class="boton-regresar admbtn" id="regresar" style="padding: 1rem;">
       </div>
       <div class="col-md-3 col-sm-3">
-        <input type="button" name="" class="boton" value="Registrar" id="registrar">
+        <input type="button" name="" class="boton admbtn" value="Registrar" id="registrar">
       </div>
     </div>
 
