--- a/ModuloAdministrador/views/menu_consultas.html
+++ b/ModuloAdministrador/views/menu_consultas.html
@@ -37,10 +37,10 @@
 
     <br>
     <!-- TABLA ACTIVIDADES -->
-    <div class="container">
+    <div class="container actnbar">
       <div class="row justify-content-center align-items-center">
-        <div class="col-md-1 col-sm-1">
-          <input type="button" name="" class="boton-regresar" value="regresar" id="regresar">
+        <div class="col-md-1 col-sm-1" >
+          <input type="button" name="" class="boton-regresar" id="regresar" style="padding: 1rem;">
         </div>
           <label> VISTA GENERAL </label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <label> PERIODO </label>  &nbsp;&nbsp;
@@ -88,8 +88,8 @@
     </div>
     <div class="container">
     <div class="row justify-content-center align-items-center">
-    <div class="col-md-2 col-sm-2">
-      <input type="button" name="" class="boton" value="Generar reporte" onclick="generarReporte()" id="reporte">
+    <div class="col-md-2 col-sm-2" >
+      <input style="height: 2.5rem;" type="button" name="" class="boton admbtn" value="Generar Reporte" onclick="generarReporte()" id="reporte">
     </div>
   </div>
 </div>
