--- a/ModuloAdministrador/views/menu.html
+++ b/ModuloAdministrador/views/menu.html
@@ -200,10 +200,10 @@
 
     <div class="row justify-content-center">
       <div class="col-md-3 col-sm-3">
-        <input type="button" name="" class="boton" value="Consultar actividades registradas" id="actividadRegistradas">
+        <input type="button" name="" class="boton admbtn" value="Consultar actividades registradas" id="actividadRegistradas">
       </div>
       <div class="col-md-3 col-sm-3">
-        <input type="button" name="" class="boton" value="Alumnos" id="alumnos">
+        <input type="button" name="" class="boton admbtn" value="Alumnos" id="alumnos">
       </div>
       </div>
     </div>
