--- a/ModuloCoordinador/views/menu.html
+++ b/ModuloCoordinador/views/menu.html
@@ -196,7 +196,7 @@
 
     <div class="row justify-content-center">
       <div class="col-md-3 col-sm-3">
-        <input type="button" name="" class="boton" value="Consultar actividades registradas" id="actividadRegistradas">
+        <input type="button" name="" class="boton admbtn" value="Consultar actividades registradas" id="actividadRegistradas">
       </div>
     </div>
 
