admin logout fix

--- a/ModuloAdministrador/views/menu.html
+++ b/ModuloAdministrador/views/menu.html
@@ -279,7 +279,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-2 col-sm-2">
-            <form class="" action="../control/logoutCoo.php">
+            <form class="" action="../control/logoutAdmin.php">
             <input type="submit" name="" class="boton" value="Salir">
             </form>
           </div>
