implementacion de font-awesome icons, aplicado a boton de consulta (abrir/cerrar)

--- a/ModuloAdministrador/views/menu.html
+++ b/ModuloAdministrador/views/menu.html
@@ -6,6 +6,7 @@
     <link href="../../assets/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../../styles/css/menu.css">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
@@ -198,7 +199,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-4"></div>
             <div class="col-md-4 col-sm-4">
-              <input id="cerrarPreview" class="boton" type="button" name="cerrar" value="CERRAR">
+              <button id="cerrarPreview" class="boton fas fa-eye-slash" type="button" name="cerrar"></button>
             </div>
             <div class="col-md-4 col-sm-4"></div>
           </div> <!-- Row #7 -->
@@ -241,7 +242,7 @@
             <div class="col-25 col-lg-20 ">
                 <table class="table table-bordered table-hover" id='consultaSolicitud' >
                   <thead id="header-table">
-                      <tr>
+                      <tr  style="text-align:center;">
                           <th>Acciones</th>
                           <th>Matricula</th>
                           <th>Actividad</th>
@@ -267,7 +268,7 @@
             <div class="col-25 col-lg-20 ">
                 <table class="table table-bordered table-hover" id='consultaRegistro' >
                   <thead id="header-table">
-                      <tr>
+                      <tr  style="text-align:center;">
                           <th>Acciones</th>
                           <th>Matricula</th>
                           <th>Actividad</th>
