--- a/ModuloAdministrador/views/menu.html
+++ b/ModuloAdministrador/views/menu.html
@@ -136,6 +136,22 @@
     <div id="solicitudPopup" class="modal">
       <div id="entirePopup" class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-7">
         <div class="container">
+          <div class="row" id="stripe_1">
+            <div class="col-md-4 col-sm-4"></div>
+            <div class="col-md-12 col-sm-12">
+              <div class="stripe" >
+                <div class="stripe__segment" style="border-radius: 10rem 0 0 2rem;"></div>
+                <div class="stripe__segment"></div>
+                <div class="stripe__segment"></div>
+                <div class="stripe__segment"></div>
+                <div class="stripe__segment"></div>
+                <div class="stripe__segment"></div>
+                <div class="stripe__segment"></div>
+                <div class="stripe__segment" style="border-radius: 0 10rem 2rem 0;"></div>
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-4"></div>
+          </div> <!-- Row #0 --> <br>
           <div class="row">
             <div class="col-md-6 col-sm-6">
               <label class="preview_label">Territorio:</label> <label id="territorio"></label> <br>
@@ -157,10 +173,7 @@
               <label class="preview_label">Hora Inicial de Evento:</label> <label id="hora_inicial"></label>
             </div>
           </div><!-- Row #2 -->
-
-
           <hr>
-
           <div class="row">
             <div class="col-md-6 col-sm-6">
               <label class="preview_label">Nombre de la Empresa:</label> <label id="nombre_empresa"></label> <br>
@@ -203,6 +216,23 @@
             </div>
             <div class="col-md-4 col-sm-4"></div>
           </div> <!-- Row #7 -->
+          <br>
+          <div class="row">
+            <div class="col-md-4 col-sm-4"></div>
+            <div class="col-md-12 col-sm-12">
+              <div class="stripe">
+                <div class="stripe__segment" style="border-radius: 2rem 0 0 10rem;"></div>
+                <div class="stripe__segment"></div>
+                <div class="stripe__segment"></div>
+                <div class="stripe__segment"></div>
+                <div class="stripe__segment"></div>
+                <div class="stripe__segment"></div>
+                <div class="stripe__segment"></div>
+                <div class="stripe__segment" style="border-radius: 0 2rem 10rem 0;"></div>
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-4"></div>
+          </div> <!-- Row #8 -->
         </div> <!-- Container -->
       </div> <!-- Entire Page -->
     </div> <!-- Modal -->
