--- a/ModuloAdministrador/views/menu.html
+++ b/ModuloAdministrador/views/menu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Menu</title>
     <link href="../../assets/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="../../assets/iconic/css/open-iconic-bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../../styles/css/menu.css">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <!-- SCRIPTS -->
@@ -234,7 +235,7 @@
                 <table class="table table-bordered table-hover" id='consultaSolicitud' >
                   <thead id="header-table">
                       <tr>
-                          <th>Acciones</th>
+                          <th>Acciones <sup><span class="oi oi-question-mark" data-toggle="tooltip" data-placement="top" title="Aceptar o Rechazar solicitud"></span></sup></th>
                           <th>Matricula</th>
                           <th>Actividad</th>
                           <th>Vista Preliminar</th>
@@ -260,7 +261,7 @@
                 <table class="table table-bordered table-hover" id='consultaRegistro' >
                   <thead id="header-table">
                       <tr>
-                          <th>Acciones</th>
+                          <th>Acciones <sup><span class="oi oi-question-mark" data-toggle="tooltip" data-placement="top" title="Aceptar o Rechazar solicitud"></th>
                           <th>Matricula</th>
                           <th>Actividad</th>
                           <th>Vista Preliminar</th>
@@ -288,8 +289,14 @@
   </div>
     <div style="height:60px"></div>
     <!-- FIN TABLA ACTIVIDADES -->
+    <script src="../../assets/popper/popper.min.js"></script>
     <script src="../../assets/bootstrap/bootstrap.min.js"></script>
     <script src="../js/menu.js"></script>
+    <script>
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+      });
+    </script>
 </body>
 
 </html>
