--- a/styles/css/solicitud.css
+++ b/styles/css/solicitud.css
@@ -86,6 +86,9 @@ html{
 .boton-del{
 		background-image: url(../../assets/img/error.png);
 }
+.progress-indicator li{
+  height: 100%;
+}
  #header-sae{
      animation-name: slideHeader;
      animation-duration: 1s;
