--- a/ModuloAdministrador/views/menu.html
+++ b/ModuloAdministrador/views/menu.html
@@ -299,7 +299,7 @@
             <div class="col-25 col-lg-20 ">
                 <table class="table table-bordered table-hover" id='consultaRegistro' >
                   <thead id="header-table">
-                      <tr>
+                      <tr style="text-align:center;">
                           <th>Acciones <sup><span class="oi oi-question-mark" data-toggle="tooltip" data-placement="top" title="Aceptar o Rechazar solicitud"></th>
                           <th>Matricula</th>
                           <th>Actividad</th>
