--- a/styles/css/menu.css
+++ b/styles/css/menu.css
@@ -15,24 +15,28 @@ html{
 		background:rgba(244, 244, 244, 0.5);
 		height: auto;
 		width: auto;
-		padding-top: 20px;
-		padding-bottom: 20px;
+		padding-top: 1.2rem;
+		padding-bottom: 1.2rem;
 		display: block;
 		margin: auto;
 		animation-name: slideModalContent;
 		animation-duration: 1s;
 }
 
+#solicitudPopup{
+  padding-top: 1.2rem;
+  padding-bottom: 1.2rem;
+}
+
 #entirePopup {
 		box-shadow: 0 5px 8px 0 rgba(0,0,0,0.4), 0 7px 20px 0 rgba(0,0,0,0.4);
 		border-radius: 35px;
 		background: #F4F4F4FF;
-		height: auto;
-		width: auto;
-		padding-top: 20px;
-		padding-bottom: 20px;
+		padding-top: 1.2rem;
+		padding-bottom: 1.2rem  ;
 		display: block;
-		margin: auto;
+		margin-top: 0.2rem;
+
 		position: absolute;
     top: 50%;
     left: 50%;
@@ -43,6 +47,7 @@ html{
   background-color: green;
   opacity: 0.5;
 }
+
 
 .estatus{
 	border-radius: 0.5rem;
@@ -162,8 +167,6 @@ html{
 		z-index: 1;
 		left: 0;
 		top: 0;
-		width: 100%;
-		height: 100%;
 		overflow: auto;
 		background-color: rgba(0, 0, 0, 0.5);
 		animation-name: openModalBlock;
