--- a/styles/css/menu.css
+++ b/styles/css/menu.css
@@ -48,6 +48,19 @@ html{
   opacity: 0.5;
 }
 
+.scroll>tbody,.scroll>thead tr { display: block; }
+ .scroll >tbody {
+    height: 400px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+ .scroll>tbody td,.scroll>thead th {
+    width: 110px;
+}
+
+ .scroll>thead th:last-child {
+    width: 126px; /* 140px + 16px scrollbar width */
+}
 
 .estatus{
 	border-radius: 0.5rem;
