--- a/styles/css/menu.css
+++ b/styles/css/menu.css
@@ -8,7 +8,7 @@ html{
   opacity: 0.5;
 }
 
-#entirePage {
+.entirePageClass, #entirePage {
 
 		box-shadow: 0 5px 8px 0 rgba(0,0,0,0.4), 0 7px 20px 0 rgba(0,0,0,0.4);
 		border-radius: 35px;
