Cambio a estilo de fondo

--- a/styles/css/home_coordinador.css
+++ b/styles/css/home_coordinador.css
@@ -1,4 +1,4 @@
 html {
-  background: url("../../assets/img/oficina.png") no-repeat center center fixed;
+  background: url("../../assets/img/citybg.jpg") no-repeat center center fixed;
   background-size: cover;
 }
