--- a/styles/css/sae.css
+++ b/styles/css/sae.css
@@ -1,6 +1,6 @@
 /* LOGIN */
 #login {
-  background: url("../assets/img/uabc-fca.jpg") no-repeat center center fixed;
+  background: url("../assets/img/office.jpg") no-repeat center center fixed;
   background-size: cover;
 }
 
