--- a/styles/css/home.css
+++ b/styles/css/home.css
@@ -44,7 +44,8 @@ html {
   /* width: 60%;
   padding-top: 10px;
   padding-bottom: 1px; */
-  margin: 60px auto auto auto;
+  margin: auto;
+  margin-top: 20vh;
   border-radius: 30px 30px 30px 30px;
   text-align: center;
   box-shadow: 0 5px 8px 0 rgba(0,0,0,0.3), 0 7px 20px 0 rgba(0,0,0,0.3);
